# aigame

./: .env.example  .gitignore  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.yml  init-mongo.sh  init.sh  manage.py
.kilocode/: mcp.json
.kilocode/rules/: 开发规则.md
admin/: apps.py  middleware.py  models.py  urls.py  utils.py
admin/forms/: ConfigForm.py  TeamForm.py  UserForm.py  base.py
admin/migrations/: 0001_initial.py
admin/views/: console.py  index.py  login.py  settings.py  team.py  user.py
aigame/: asgi.py  settings.py  urls.py  wsgi.py
docs/: 鉴权安全审计报告.md  鉴权实现说明.md
evaluate_example/: README.md  pack.py  problem_template.yml  test_evaluate.py
evaluate_example/code_execution_example/: desc.md  generate_data.py  problem.yml
evaluate_example/judge_sum/: desc.md  judge.py  problem.yml
evaluate_example/label_compare/: desc.md  judge.py  problem.yml
evaluate_example/ns_2025_00/: desc.md  judge.py  problem.yml  (+1 more)
evaluateapp/: .env.example  README.md  main.py  pyproject.toml  setup_chroot.sh  test_sandbox.py
evaluateapp/api/: evaluate.py
evaluateapp/core/: config.py
evaluateapp/docker/: evaluateapp.Dockerfile
evaluateapp/schemas/: evaluation.py
evaluateapp/services/: docker_sandbox.py  eval_script_template.py  sandbox.py
seccomp_profiles/: python-basic.json
templates/: index.html
user/: middleware.py  models.py  urls.py
webapp/: .env.example  app.config.ts  app.vue  cookies.txt  mongo-init.js  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test-cookies.txt
(+226 files in other folders)
