[project]
name = "evaluateapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pyseccomp>=0.1.2",
    "python-multipart>=0.0.20",
    "python-prctl>=1.8.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
